@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Improve cache handling
 * Improve getting scenario attributes
 * Handle bats in a simpler way than Git submodules
 * Document CTU subcommands with examples
